--- a/Stylist/Tutorial.storyboard
+++ b/Stylist/Tutorial.storyboard
@@ -20,7 +20,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="fittingRoom" translatesAutoresizingMaskIntoConstraints="NO" id="6BJ-zA-dxw">
                                 <rect key="frame" x="-49" y="245" width="698" height="335"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FIT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfh-RD-nuF">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="FIT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfh-RD-nuF">
                                 <rect key="frame" x="148" y="39" width="305" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="305" id="O7q-LT-lFA"/>
@@ -30,8 +30,8 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="Fitting Room はスワイプ一つでコーディネート。下の矢印と線で服を調節して着こなそう。" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Qn-ou-Ibq">
-                                <rect key="frame" x="197" y="157" width="207" height="67"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="Fit はスワイプ一つでコーディネート。下の矢印と線で服を調節して着こなそう。" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Qn-ou-Ibq">
+                                <rect key="frame" x="198" y="157" width="206" height="67"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="71" id="2FZ-hM-n75"/>
                                     <constraint firstAttribute="width" constant="207" id="l1B-3e-dhm"/>
